--- a/til/2017-03-28-sqllite/index.html
+++ b/til/2017-03-28-sqllite/index.html
@@ -241,16 +241,16 @@ the storage class of the text is converted to INTEGER or REAL (in order of prefe
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-30-bash-shortcuts/" class="hover:underline">
-                <span class="text-blue-700 font-bold">BASH Shortcuts I was not not aware of</span>
+            <a href="https://kiru.io/til/2017-03-07-binding/" class="hover:underline">
+                <span class="text-blue-700 font-bold">What is the difference between 127.0.0.1 and 0.0.0.0?</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-12-07-new-javascript-features/" class="hover:underline">
-                <span class="text-blue-700 font-bold">JavaScript Function string</span>
+            <a href="https://kiru.io/til/2017-03-30-bash-shortcuts/" class="hover:underline">
+                <span class="text-blue-700 font-bold">BASH Shortcuts I was not not aware of</span>
             </a>
         </div>
     </div>
