--- a/til/2019-11-05-simulate-network-control/index.html
+++ b/til/2019-11-05-simulate-network-control/index.html
@@ -233,16 +233,16 @@ dropping.</p>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2020-06-28-multiselect/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Empty multiselect is not set</span>
+            <a href="https://kiru.io/til/2017-03-28-sqllite/" class="hover:underline">
+                <span class="text-blue-700 font-bold">SQLite Type Affinity</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/" class="hover:underline">
-                <span class="text-blue-700 font-bold"></span>
+            <a href="https://kiru.io/til/2017-03-14-du/" class="hover:underline">
+                <span class="text-blue-700 font-bold">What is the difference between `du` and `df` command?</span>
             </a>
         </div>
     </div>
