--- a/til/2019-12-04-pid/index.html
+++ b/til/2019-12-04-pid/index.html
@@ -220,8 +220,8 @@ $ tail --pid=$pid -f /dev/null Learned from to StackOverflow answer." />
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-27-case/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Various</span>
+            <a href="https://kiru.io/til/2020-06-28-multiselect/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Empty multiselect is not set</span>
             </a>
         </div>
     </div>
@@ -236,8 +236,8 @@ $ tail --pid=$pid -f /dev/null Learned from to StackOverflow answer." />
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-12-04-pid/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Waiting for process</span>
+            <a href="https://kiru.io/til/2019-12-07-new-javascript-features/" class="hover:underline">
+                <span class="text-blue-700 font-bold">JavaScript Function string</span>
             </a>
         </div>
     </div>
