--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ I get a single value for free. I have to brainstorm more about what is a good me
 the URL which is sent in the mail (for the magic-link) is hard-coded. I tried to fix it in a few minutes, but
 it will take longer than that. I decide to postpone it until all features are complete.</p>
 <p>For tomorrow, I will spend some time to make all ui-component consistent, and test on mobile.</p>
-<p>I got asked where the link for the project is a few times, added a prominent link on the top of this page.</p>
+<p>I got asked where the link to flashdictation.com a few times, so added a prominent link on the top of this page (with the logo).</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day13">Day 13: Add dictations</div>
 <p>From yesterday&rsquo;s plan:</p>
 <ul>
