--- a/til/2019-12-04-pid/index.html
+++ b/til/2019-12-04-pid/index.html
@@ -220,16 +220,16 @@ $ tail --pid=$pid -f /dev/null Learned from to StackOverflow answer." />
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-11-05-simulate-network-control/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Simulate network control</span>
+            <a href="https://kiru.io/til/2017-03-27-case/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Various</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2018-10-22-bash/" class="hover:underline">
-                <span class="text-blue-700 font-bold">.bash_profile vs .bashrc</span>
+            <a href="https://kiru.io/til/2017-03-29-uri/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Is URI case sensitive?</span>
             </a>
         </div>
     </div>
