--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
 
         <div class="markdown">
             <div class="text-sm font-mono tracking-wide mx-auto text-center pb-3">
-<div class="text-xs">16 / 25 days</div>
+<div class="text-xs">17 / 25 days</div>
 <span id="progressbar" class="text-xs ">
-  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜
+  🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜
 </span>
 
 </div>
@@ -254,6 +254,7 @@
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
+  <li> <a href="#day17">Day 17: Production</a> </li>
   <li> <a href="#day16">Day 16: Makeup Part 2</a> </li>
   <li> <a href="#day15">Day 15: Makeup Part 1</a> </li>
   <li> <a href="#day14">Day 14: Share dictations</a> </li>
@@ -283,6 +284,13 @@
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day17">Day 17: Production</div>
+<p>No UI changes today. I tried to fix the production environment, but there were too many issues. The main problem is, that
+I have to setup a different Supabase project and copy all data. Unfortunately, that is not easy. So I decided to re-do all database
+and recreate the data. Most of them being Stripe-products. Then I spent some time to fix stripe production.</p>
+<p>Obviously this did not work as flawlessly. Finally, I gave up and thought I can at least fix Vercel to have the landing page fixed.
+After ignoring bunch of TypeScript errors, I have a new version online:</p>
+<img src="/images/day17-landing.png" alt="edit page" class="lg:w-3/4 shadow-md mx-auto my-4 border-default border-blue-800 rounded-lg">
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day16">Day 16: Makeup Part 2</div>
 <p>As planned, finished the redesign for the login and dictation pages:</p>
 <div class="flex flex-col md:flex-row md:gap-3 py-3">
