--- a/til/2017-03-05-sms-length/index.html
+++ b/til/2017-03-05-sms-length/index.html
@@ -233,8 +233,8 @@
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-27-case/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Various</span>
+            <a href="https://kiru.io/til/2020-06-28-multiselect/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Empty multiselect is not set</span>
             </a>
         </div>
     </div>
@@ -249,8 +249,8 @@
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-29-uri/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Is URI case sensitive?</span>
+            <a href="https://kiru.io/til/2019-12-07-new-javascript-features/" class="hover:underline">
+                <span class="text-blue-700 font-bold">JavaScript Function string</span>
             </a>
         </div>
     </div>
